--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -6,6 +6,12 @@ nav
 }
 nav a{color:#62d158;}
 nav a:hover {background-color:#f71303;}
-
-
-
+@media only screen and (max-width: 801px) {
+    nav a{display:100%}
+    nav a{display: block;}
+    span{display: none;}
+    nav a{display: space-around;}
+}
+@media only screen and (min-width:800px){
+    
+}
